src/objects/Community_Resource__c.object
<CustomObject>
    <description>This object is used to store links to external systems and resource documents.  Resources will be organized by Themes and Tags where Theme.Type = Resource</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>Represents a description of the Resource that is presented in the Community.</description>
        <inlineHelpText>Represents a description of the Resource that is presented in the Community.</inlineHelpText>
        <label>Description</label>
        <length>15000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Help_Link__c</fullName>
        <defaultValue>false</defaultValue>
        <description>if checked, link will be the Help link</description>
        <label>Help Link</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <description>Used to store a hyperlink for a resource that is either a website or a file hosted elsewhere that can be accessed with a direct link.</description>
        <label>Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Primary_Tag__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Define the primary tag used to categorize and organize this resource in the Resource Library list view.  Additional tags may also be associated separately.</description>
        <label>Primary Tag</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You must select a Resource Tag as the primary tag for this resource.</errorMessage>
            <filterItems>
                <field>Community_Tag__c.Community_Theme__r.Theme_Type__c</field>
                <operation>equals</operation>
                <value>Resource</value>
            </filterItems>
            <infoMessage>You can only select Tags where the Theme Type = Resource.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Community_Tag__c</referenceTo>
        <relationshipLabel>Resources Tagged w Primary</relationshipLabel>
        <relationshipName>Resource_Tagged_w_Primary</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quick_Link__c</fullName>
        <defaultValue>false</defaultValue>
        <description>if checked, link will be displayed in the &quot;Links&quot; menu</description>
        <inlineHelpText>f checked, link will be displayed in the &quot;Links&quot; menu</inlineHelpText>
        <label>Quick Link</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Resource_Name__c</fullName>
        <description>Identifies the name of the Resource that will be displayed in the Community.</description>
        <inlineHelpText>Identifies the name of the Resource that will be displayed in the Community.</inlineHelpText>
        <label>Resource Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resource_SF_ID__c</fullName>
        <description>Represents the 18 digit Salesforce Unique ID of the Resource record.</description>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Represents the 18 digit Salesforce Unique ID of the Resource record.</inlineHelpText>
        <label>Resource SF ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sort__c</fullName>
        <description>To use to define sort order of Resources when viewing records on the CommunityResourceList page</description>
        <label>Sort</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>The status of a resource will determine whether it is visible in the Community.</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Community Resource</label>
    <listViews>
        <fullName>Active_Resources</fullName>
        <columns>NAME</columns>
        <columns>Resource_Name__c</columns>
        <columns>Primary_Tag__c</columns>
        <columns>Sort__c</columns>
        <columns>Quick_Link__c</columns>
        <columns>Link__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Active Resources</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Resource_Name__c</columns>
        <columns>Description__c</columns>
        <columns>Status__c</columns>
        <columns>Primary_Tag__c</columns>
        <columns>Quick_Link__c</columns>
        <columns>Sort__c</columns>
        <columns>Link__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Resources</fullName>
        <columns>NAME</columns>
        <columns>Resource_Name__c</columns>
        <columns>Primary_Tag__c</columns>
        <columns>Sort__c</columns>
        <columns>Quick_Link__c</columns>
        <columns>Help_Link__c</columns>
        <columns>Link__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Resources</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Resource Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Community Resources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>